<resources>
    <string name="app_name">快买他精简版</string>

    <string name="welcome_kmt">快买他欢迎您</string>
    <string name="register">注册</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="zh_login">账号登录</string>
    <string name="phone_sms_login">手机验证码登录</string>
    <string name="wait_subscription">等待认购</string>
    <string name="immediately_subscription">立即认购</string>
    <string name="subscription">认购</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="smscode">短信验证码</string>
    <string name="getSmscode">获取短信验证码</string>

    <string name="zfw_fenxiang">《快买他风险提示函》</string>
    <string name="zfw_chengnuo">《快买他买者自负承诺函》</string>
    <string name="zfw_register">《快买他的用户注册协议》</string>

    <string name="distribution_reward">邀请好友</string>

    <string name="set">设置</string>
    <string name="set_update_pwd">修改登录密码</string>
    <string name="set_pwd">设置登录密码</string>
    <string name="set_pay_set">支付设置</string>
    <string name="set_device_manager">登录设备管理</string>
    <string name="set_up_inviteCode">上级邀请码</string>
    <string name="set_bindUp_inviteCode">绑定上级邀请码</string>
    <string name="set_kmt_rule">快买他买卖规则</string>
    <string name="set_kmt_xieyi">用户协议</string>
    <string name="set_version">版本号</string>
    <string name="set_check_version">检查更新</string>
    <string name="set_clear_cache">清空缓存</string>
    <string name="why_account">快买他账户</string>
    <string name="no_update">最新版本不需要更新</string>
    <string name="login_device">最近登录设备：你可以删除列表中的设备，删除后在该设备登录快买他需要验证您的手机号。</string>

    <string name="grab_red_envelope">抢快买他红包,买网红时间</string>
    <string name="trade_unit">个</string>
    <string name="red_total_num">个,共</string>
    <string name="red_total_money">个,市值</string>

    <string name="cancle_order">取消订单</string>
    <string name="detele_order">删除订单</string>

    <string name="next">稍后再说</string>
    <string name="now">立即更新</string>
    <string name="exit">退出应用</string>
    <string name="risk_warning">您的提币操作一旦完成，对应的资产所有权将由您变更为目标地址所对应的账户所有人享有，请您务必在提币操作前，仔细核对提币地址信息，确保提币属于自愿行为,并确认不涉及任何传销、非法集资、诈骗等违法情形,谨防上当受骗，避免造成不必要的财产损失。</string>

</resources>
