<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/login_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/login_number_rb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:drawableBottom="@drawable/radiogroup_login"
            android:gravity="center"
            android:text="@string/zh_login"
            android:textColor="@color/color_selector_login"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/login_phone_rb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableBottom="@drawable/radiogroup_login"
            android:gravity="center"
            android:text="@string/phone_sms_login"
            android:textColor="@color/color_selector_login" />
    </RadioGroup>


    <RelativeLayout
        android:id="@+id/login_numlogin_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp15">

        <TextView
            android:id="@+id/zh_phone_tv"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp50"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/phone_number"
            android:textColor="@color/black33"
            android:textSize="@dimen/dp15" />

        <EditText
            android:id="@+id/login_num_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_toRightOf="@id/zh_phone_tv"
            android:background="@color/transparent"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/black33"
            android:textSize="15sp" />

        <View
            android:id="@+id/zh_line1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_alignLeft="@id/zh_phone_tv"
            android:layout_alignBottom="@id/zh_phone_tv"
            android:background="@color/lineColor" />

        <TextView
            android:id="@+id/zh_pwd_tv"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp50"
            android:layout_below="@id/zh_line1"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textColor="@color/black33"
            android:textSize="@dimen/dp15" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_zh_pwd_til"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_below="@id/zh_line1"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_toRightOf="@id/zh_phone_tv"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/login_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:background="@color/transparent"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black33"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/zh_login_sms"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_below="@id/zh_pwd_tv"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/login_zh_sms_tv"
                android:layout_width="@dimen/dp80"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/smscode"
                android:textColor="@color/black33"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/zh_login_send_messagebtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="@dimen/dp12"
                android:paddingRight="@dimen/dp12"
                android:text="@string/getSmscode"
                android:textColor="@color/black66"
                android:textSize="15sp" />

            <View
                android:id="@+id/login_zh_line3"
                android:layout_width="@dimen/px1"
                android:layout_height="@dimen/dp20"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp12"
                android:layout_toLeftOf="@id/zh_login_send_messagebtn"
                android:background="@color/lineColor" />

            <EditText
                android:id="@+id/zh_login_sms_validate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_toLeftOf="@id/login_zh_line3"
                android:layout_toRightOf="@id/login_zh_sms_tv"
                android:layout_weight="1"
                android:background="@null"
                android:maxLength="6"
                android:numeric="integer"
                android:textColor="@color/black33"
                android:textSize="15sp" />

            <View
                android:id="@+id/zh_line2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px1"
                android:background="@color/lineColor" />
        </RelativeLayout>
    </RelativeLayout>

    <ViewStub
        android:id="@+id/login_vs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout="@layout/viewstub_smslogin" />

    <TextView
        android:id="@+id/login_forget_tv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp50"
        android:layout_gravity="right"
        android:gravity="center"
        android:paddingLeft="@dimen/dp10"
        android:paddingRight="@dimen/dp15"
        android:text="@string/forgetpwd" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        android:layout_marginLeft="@dimen/dp12"
        android:layout_marginTop="@dimen/dp5"
        android:layout_marginRight="@dimen/dp12"
        android:background="@drawable/btn_gradient_round2_selector"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/dp15"
        android:textStyle="bold" />

</LinearLayout>